# snake-tetris-c-cpp

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile
src/brick_game/snake/: controller.cc  controller.h  model.cc  model.h
src/brick_game/tetris/: backend.c  backend.h  fsm.c  fsm.h  tetris_lib.c  tetris_lib.h
src/gui/cli/: frontend.c  frontend.h  main.c
src/gui/desktop/: mainwindow.cc  mainwindow.h  mainwindow.ui  mywidgetsnake.cc  mywidgetsnake.h  mywidgettetris.cc  mywidgettetris.h  nextfigure.cc  nextfigure.h  snakewindow.cc  snakewindow.h  snakewindow.ui  tetriswindow.cc  tetriswindow.h  tetriswindow.ui
src/tests/: tests.cc
